<resources>
    <string name="app_name">ShoeStore</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_hint">email@address.com</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="login">Login</string>
    <string name="title">Shoe Store</string>
    <string name="welcome_title">Welcome to Shoe Store!</string>
    <string name="welcome_description">This is your favourite shoe store app! Get started now :D </string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instruction_title">Instruction</string>
    <string name="instruction_description">Use the floating "plus" button on the shoe list to add more shoe items!</string>
    <string name="get_started">Get Started</string>
    <string name="shoe_button_cd">Shoe detail screen</string>
    <string name="logout">logout</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="company">Company</string>
    <string name="shoe_name">Shoe Name</string>
</resources>
