<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginFragment"
    >

    <data>

        <import type="com.udacity.shoestore.utils.Converter"/>

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.shoe.ShoeViewModel"
            />

    </data>

    <!-- Used ConstraintLayout layout here because the texts and text fields are vertical but the
         buttons are horizontally aligned. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/shoe_store_padding"
        android:paddingTop="@dimen/shoe_store_padding"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/shoe_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/shoe_name_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:inputType="text"
            android:text="@={shoeViewModel.shoe.name}"
            app:layout_constraintBottom_toBottomOf="@id/shoe_name_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/shoe_name_text"
            app:layout_constraintTop_toTopOf="@id/shoe_name_text"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/company_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/shoe_store_padding"
            android:text="@string/company"
            app:layout_constraintStart_toStartOf="@id/shoe_name_text"
            app:layout_constraintTop_toBottomOf="@id/shoe_name_text"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/company_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@={shoeViewModel.shoe.company}"
            app:layout_constraintBottom_toBottomOf="@id/company_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/shoe_name_field"
            app:layout_constraintTop_toTopOf="@id/company_text"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/shoe_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/shoe_store_padding"
            android:text="@string/shoe_size"
            app:layout_constraintStart_toStartOf="@id/company_text"
            app:layout_constraintTop_toBottomOf="@id/company_text"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/shoe_size_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@={Converter.doubleToString(shoeViewModel.shoe.size)}"
            app:layout_constraintBottom_toBottomOf="@id/shoe_size_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/shoe_name_field"
            app:layout_constraintTop_toTopOf="@id/shoe_size_text"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/shoe_store_padding"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@id/shoe_size_text"
            app:layout_constraintTop_toBottomOf="@id/shoe_size_text"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/description_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@={shoeViewModel.shoe.description}"
            app:layout_constraintBottom_toBottomOf="@id/description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/shoe_name_field"
            app:layout_constraintTop_toTopOf="@id/description_text"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_field"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintTop_toTopOf="@id/cancel_button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>